# vut-fit-ivs-project2

./: README.md  README_example.md  hodnoceni.txt  skutecnost.txt
src/: CMakeLists.txt  Doxyfile  Makefile  adv_math.cpp  adv_math.h  basic_math.cpp  basic_math.h  calculator.c  calculator.cpp  calculator_ui.glade  calculator_ui_styles.css  compile_tests.sh  mainpage.dox  math_adv.cpp  math_basic.cpp  stddev.cpp  tests_math.cpp  warning_doxygen.txt
src/CALCULATOR/: CMakeCache.txt  CMakeLists.txt  Calculator.desktop  Makefile  calculator.cpp  calculator_ui.glade  calculator_ui_styles.css  cmake_install.cmake
src/TESTS/: Makefile  compile_tests.sh  run_tests  tests_math.cpp
src/doc/html/: adv__math_8cpp.html  adv__math_8cpp.js  adv__math_8cpp__incl.dot  adv__math_8cpp__incl.md5  adv__math_8cpp_source.html  adv__math_8h.html  adv__math_8h.js  adv__math_8h__dep__incl.dot  adv__math_8h__dep__incl.md5  adv__math_8h_source.html  basic__math_8cpp.html  basic__math_8cpp.js  basic__math_8cpp__incl.dot  basic__math_8cpp__incl.md5  basic__math_8cpp_source.html  basic__math_8h.html  basic__math_8h.js  basic__math_8h__dep__incl.dot  basic__math_8h__dep__incl.md5  basic__math_8h_source.html  calculator_8cpp.html  calculator_8cpp.js  calculator_8cpp__incl.dot  calculator_8cpp__incl.md5  calculator_8cpp_source.html  dir_000000_000001.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1.js  dir_d887fd63f1dc83e19e8245367ac684d3.html  dir_d887fd63f1dc83e19e8245367ac684d3.js  dir_d887fd63f1dc83e19e8245367ac684d3_dep.dot  dir_d887fd63f1dc83e19e8245367ac684d3_dep.md5  files.html  files.js  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.dot  graph_legend.html  (+6 more)
src/doc/html/search/: all_0.html  all_0.js  all_1.html  all_10.html  all_11.html  all_12.html  all_13.html  all_13.js  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  all_6.html  all_6.js  all_7.html  all_7.js  all_8.html  all_8.js  all_9.html  all_9.js  all_a.html  all_a.js  all_b.html  all_c.html  all_c.js  all_d.html  all_d.js  all_e.html  (+64 more)
src/installer/: calculator-1.0-Linux.deb
src/installer/generator/: CMakeLists.txt
src/libs/: adv_math.cpp  adv_math.h  basic_math.cpp  basic_math.h
src/profiling/: stddev.cpp
(+6 files in other folders)
